# ecs-taskdef

./: README.md  pyproject.toml  setup.py  test_validation.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  copilot_template.md  documentation_improvement.md  feature_request.md
.github/workflows/: copilot-setup-steps.yml  pytest.yml  ruff.yml
src/ecs_taskdef/: __init__.py
src/ecs_taskdef/domain/entity/: __init__.py  container_definition.py  environment_variable.py  task_definition.py
src/ecs_taskdef/domain/service/: __init__.py  get_secrets.py
tests/unit/domain/: __init__.py
tests/unit/domain/entity/: __init__.py  test_container_definition.py  test_container_definition_additions.py  test_container_definition_pydantic.py  test_environment_variable.py  test_environment_variable_pydantic.py  test_task_definition.py  test_task_definition_additions.py  test_task_definition_pydantic.py
tests/unit/domain/service/: __init__.py  test_get_secrets.py  test_get_secrets_pydantic.py
