[project]
name = "ecs-taskdef"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "gsy0911", email = "yoshiki0911@gmail.com" }
]
dependencies = [
    "pydantic>=2.10.5",
    "boto3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ecs_taskdef"]
